--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,21 +12,20 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./config/conf.d/:/etc/nginx/conf.d/:ro
-      - ./config/sites-enabled/:/etc/nginx/sites-enabled/:ro
-      - ./config/html/:/var/www/html/:ro
-      - ./config/letsencrypt/:/etc/letsencrypt/:ro
+      - ./config/etc/letsencrypt/:/etc/letsencrypt/:ro
+      - ./config/etc/nginx/conf.d/:/etc/nginx/conf.d/:ro
+      - ./config/etc/nginx/sites-enabled/:/etc/nginx/sites-enabled/:ro
+      - ./config/etc/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./config/var/lib/letsencrypt/:/var/lib/letsencrypt/:ro
+      - ./config/var/www/:/var/www/:ro
     networks:
       - proxy-reverse
 
   certbot:
     image: certbot/certbot:v1.23.0
     volumes:
-      - ./config/nginx.conf:/etc/nginx/nginx.conf:rw
-      - ./config/conf.d/:/etc/nginx/conf.d/:rw
-      - ./config/sites-enabled/:/etc/nginx/sites-enabled/:rw
-      - ./config/html/:/var/www/html/:rw
-      - ./config/letsencrypt/:/etc/letsencrypt/:rw
+      - ./config/etc/letsencrypt/:/etc/letsencrypt/:rw
+      - ./config/var/lib/letsencrypt/:/var/lib/letsencrypt/:rw
+      - ./config/var/www/:/var/www/:rw
     networks:
       - proxy-reverse
